--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,6 +9,7 @@ edition = "2021"
 actix = "0.13.0"
 actix-web-actors = "4.1.0"
 actix-web = "4.1.0"
+actix-cors = "0.6"
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 log = "0.4.17"
